calico/calicoctl.yaml

apiVersion: v1
kind: Pod
metadata:
  name: calicoctl
  namespace: kube-system
spec:
  hostNetwork: true
  serviceAccountName: calicoctl
  containers:
  - name: calicoctl
    image: quay.io/calico/ctl:v3.1.3
    command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: env
            operator: In
            values:
            - production
