calico/csusb.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: csusb-trusted-nodes
spec:
  order: 11
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      source:
        selector: role == 'csusb-trusted'
  selector: csusb-trusted == 'true'
