calico/policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-portmapper
spec:
  order: 5
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Deny
      protocol: TCP
      destination:
        ports:
        - 111
  selector: has(host-endpoint)
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-cluster-internal-ingress
spec:
  order: 10
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      source:
        selector: role == 'trusted'
  selector: has(host-endpoint)
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-outbound-external
spec:
  order: 10
  applyOnForward: true
  egress:
    - action: Allow
  selector: has(host-endpoint)
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-ping
spec:
  order: 12
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      source:
        selector: role == 'icmp'
      protocol: ICMP
  selector: has(host-endpoint)
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-global
spec:
  order: 15
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
        - 9443
        - 443
        - 80
  selector: has(host-endpoint)
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-nodeports
spec:
  order: 15
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
        - 31415
  selector: has(host-endpoint)
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-kubectl
spec:
  order: 16
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
        - 6443
  selector: "role==\"master\""
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: drop-other-ingress
spec:
  order: 20
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Deny
  selector: has(host-endpoint)
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: globus
spec:
  order: 16
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
        - 2811
        - 50000:51000
        - 7512
  selector: "globus==\"true\""
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: stashcache
spec:
  order: 16
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
        - 8000
        - 8444
  selector: "stashcache==\"true\""
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: port8080
spec:
  order: 16
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
        - 8080
  selector: "port8080==\"true\""
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: port1094
spec:
  order: 16
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
        - 1094
  selector: "port1094==\"true\""
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: port9k
spec:
  order: 16
  preDNAT: true
  applyOnForward: true
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
        - 9000
        - 9001
        - 9004
  selector: "port9k==\"true\""
